--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Recursion — Notes, Examples, Flowcharts & Diagrams</title>
+  <title>Recursion and Recursive Problem solving</title>
   <style>
     :root{--bg:#f6fbff;--card:#fff;--accent:#0b5dd7;--muted:#6b7280;--radius:12px;--pad:18px;--max:1100px}
     *{box-sizing:border-box}
@@ -30,8 +30,8 @@
   <div class="wrap">
     <header>
       <div>
-        <h1>Recursion — Complete Notes (Beginner → Examples → Visuals)</h1>
-        <p>All the theory, step-by-step problem solving, code examples (Python), and SVG flowcharts/diagrams in one file.</p>
+        <h1>Recursion and Recursive Problem solving</h1>
+        <p>                           Presented by acchutha ks</p></p>
       </div>
     </header>
 
