--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <header>
       <div>
         <h1>Recursion and Recursive Problem solving</h1>
-        <p>                           Presented by acchutha ks</p></p>
+        <p> Presented By PRESENTED BY ACCHUTHA KS</p>
+        <P>MCA I ST YEAR </P>
+        <P>PG00004</P>
       </div>
     </header>
 
