--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header>
       <div>
         <h1>Recursion and Recursive Problem solving</h1>
-        <p> Presented By PRESENTED BY ACCHUTHA KS</p>
+        <p>  PRESENTED BY ACCHUTHA KS</p>
         <P>MCA I ST YEAR </P>
         <P>PG00004</P>
       </div>
