--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Recursion & Recursive Problem Solving </title>
+  <title>Recursion & Recursive Problem Solving — Visual Guide</title>
   <style>
     :root{
       --bg-1: #000000;
@@ -154,10 +154,8 @@
   <div class="wrap">
     <header>
       <div>
-        <h1>Recursion & Recursive Problem Solving</h1>
-        <p>ACCHUTHA KS</p>
-        <P>MCA 1 ST YEAR</P>
-        <P>PG00004</P>
+        <h1>Recursion & Recursive Problem Solving — Visual Guide</h1>
+        <p>A compact HTML + CSS page that includes flowcharts and key numbered sections (1,2,3,4,5,9).</p>
       </div>
     </header>
 
@@ -184,7 +182,7 @@
           <h2><span class="section-number">3</span>How Recursion Works — Flow Diagram</h2>
           <div class="flow">
             <!-- Simple flowchart SVG -->
-            <svg viewBox="0 0 800 200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Recursion flowchart">
+            <svg viewBox="0 0 1200 350" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Recursion flowchart">
               <defs>
                 <marker id="arrow" markerWidth="10" markerHeight="10" refX="6" refY="5" orient="auto">
                   <path d="M0 0 L10 5 L0 10 z" fill="#7dd3fc" />
@@ -210,7 +208,7 @@
             </svg>
 
             <!-- Call stack illustration -->
-            <svg viewBox="0 0 800 220" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Call stack illustration">
+            <svg viewBox="0 0 1200 380" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Call stack illustration">
               <rect x="14" y="14" width="200" height="190" rx="10" fill="#021622" stroke="#083d4b" />
               <text x="114" y="34" text-anchor="middle" fill="#9adff4" font-size="13">Call Stack (top)</text>
 
@@ -238,7 +236,7 @@
           <p>Factorial recursively: <code>n! = n × (n−1)!</code> with <code>0! = 1</code>.</p>
 
           <!-- Factorial Flowchart -->
-          <svg viewBox="0 0 800 260" xmlns="http://www.w3.org/2000/svg" style="margin-bottom:12px;">
+          <svg viewBox="0 0 1200 420" xmlns="http://www.w3.org/2000/svg" style="margin-bottom:12px;">
             <defs>
               <marker id="arrow2" markerWidth="10" markerHeight="10" refX="6" refY="5" orient="auto">
                 <path d="M0 0 L10 5 L0 10 z" fill="#ffb86c" />
@@ -280,7 +278,7 @@ print(factorial(5))  # 120</code></pre>
           <p>Recursive Fibonacci splits into two subproblems: fib(n−1) and fib(n−2).</p>
 
           <!-- Fibonacci Flowchart -->
-          <svg viewBox="0 0 900 320" xmlns="http://www.w3.org/2000/svg" style="margin-bottom:12px;">
+          <svg viewBox="0 0 1400 500" xmlns="http://www.w3.org/2000/svg" style="margin-bottom:12px;">
             <defs>
               <marker id="arrow3" markerWidth="10" markerHeight="10" refX="6" refY="5" orient="auto">
                 <path d="M0 0 L10 5 L0 10 z" fill="#8be9fd" />
@@ -578,4 +576,3 @@ print([fib(i) for i in range(8)])  # [0,1,1,2,3,5,8,13]</code></pre>
   </script>
 </body>
 </html>
-
