--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <div class="wrap">
     <header>
       <div>
-        <h1>Recursion & Recursive Problem Solving — Visual Guide</h1>
+        <h1>Recursion & Recursive Problem Solving </h1>
         <p>ACCHUTHA KS</p>
         <P>MCA 1ST YEAR</P>
         <p>PG00004</p>
